force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/HFS_IntegrationErrorTrackedBag__c.object-meta.xml
<CustomObject>
    <label>HFS IntegrationError TrackedBag</label>
    <nameField>
        <displayFormat>IntegrationError-{0000}</displayFormat>
        <label>HFS IntegrationErrorTrackedBag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HFS IntegrationError TrackedBags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>