force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/Brand_Lease_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Lease_Id__c</fullName>
    <label>Brand Lease Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>