force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/Brand_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Location_Name__c</fullName>
    <label>Brand Location Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>