force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/Estimated_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Spend__c</fullName>
    <label>Estimated Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>