force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/Guest_Code__c.field-meta.xml
<CustomField>
    <fullName>Guest_Code__c</fullName>
    <label>Guest Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>