force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/HFS_Case__c.field-meta.xml
<CustomField>
    <fullName>HFS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>.</description>
    <label>HFS Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>HFS IntegrationError TrackedBags</relationshipLabel>
    <relationshipName>HFS_IntegrationError_TrackedBags</relationshipName>
    <type>Lookup</type>
</CustomField>