force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/HFS_Guest_ID__c.field-meta.xml
<CustomField>
    <fullName>HFS_Guest_ID__c</fullName>
    <formula>HFS_Case__r.Service_Guest_Number__c</formula>
    <label>HFS Guest ID</label>
    <type>Text</type>
</CustomField>