force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/Is_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Is_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resolved</label>
    <type>Checkbox</type>
</CustomField>