force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/List_of_Bags__c.field-meta.xml
<CustomField>
    <fullName>List_of_Bags__c</fullName>
    <label>List of Bags</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>