force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/Requires_Technical_Support__c.field-meta.xml
<CustomField>
    <fullName>Requires_Technical_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Technical Support</label>
    <type>Checkbox</type>
</CustomField>