force-app/main/default/objects/HFS_IntegrationErrorTrackedBag__c/fields/Service_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Ticket_Number__c</fullName>
    <label>Service Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>